# Facial_Landmarks

./: .gitignore  config.py  config.yaml  create_dataset.py  dto.py  main.py  mediapipe_face_detection.py  my_utils.py  progressbar.py  pyproject.toml
