[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facial_landmarks"
version = "0.0.1"
description = "Facial Landmarks Detection"
readme = "README.md"
authors = [
  { name = "berkaytrhn", email = "berkaytrhn@gmail.com" }
]
license = { text = "MIT" }
keywords = ["Facial Landmarks", "Face Detection", "Mediapipe"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11.8"
dependencies = [
  "absl-py=2.1.0",
  "attrs=24.3.0",
  "cffi=1.17.1",
  "colorama=0.4.6",
  "contourpy=1.3.1",
  "cycler=0.12.1",
  "flatbuffers=24.12.23",
  "fonttools=4.55.3",
  "jax=0.4.38",
  "jaxlib=0.4.38",
  "kiwisolver=1.4.8",
  "matplotlib=3.10.0",
  "mediapipe=0.10.20",
  "ml_dtypes=0.5.0",
  "numpy=1.26.4",
  "opencv-contrib-python=4.10.0.84",
  "opencv-python=4.10.0.84",
  "opt_einsum=3.4.0",
  "packaging=24.2",
  "pillow=11.0.0",
  "protobuf=4.25.5",
  "pycparser=2.22",
  "pyparsing=3.2.0",
  "python-dateutil=2.9.0.post0",
  "scipy=1.14.1",
  "sentencepiece=0.2.0",
  "six=1.17.0",
  "sounddevice=0.5.1",
  "tqdm=4.67.1"

]



[project.urls]
"Source" = "https://github.com/berkaytrhn/Facial_Landmarks"



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]